// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataTable /> Default story renders snapshot 1`] = `
<div
  class="data-table"
>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> TableA story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        This is a really long title that really should not be this long and it just keeps going and going and going
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Seriously, who let this happen?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":ra:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <span
          class="button__disabled"
        >
          <button
            aria-label="Add a row"
            class="button button--layout-icon-only button--disabled button--secondary button--lg button--variant-default"
            disabled=""
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7c-.55 0-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3V8c0-.55-.45-1-1-1zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> TableB story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        This is a really long title that really should not be this long and it just keeps going and going and going
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Seriously, who let this happen?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":rc:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <span
          class="button__disabled"
        >
          <button
            aria-label="Add a row"
            class="button button--layout-icon-only button--disabled button--secondary button--lg button--variant-default"
            disabled=""
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7c-.55 0-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3V8c0-.55-.45-1-1-1zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> TableC story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        This is a really long title that really should not be this long and it just keeps going and going and going
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Seriously, who let this happen?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":re:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <span
          class="button__disabled"
        >
          <button
            aria-label="Add a row"
            class="button button--layout-icon-only button--disabled button--secondary button--lg button--variant-default"
            disabled=""
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7c-.55 0-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3V8c0-.55-.45-1-1-1zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> TableD story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        This is a really long title that really should not be this long and it just keeps going and going and going
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Seriously, who let this happen?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":rg:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <span
          class="button__disabled"
        >
          <button
            aria-label="Add a row"
            class="button button--layout-icon-only button--disabled button--secondary button--lg button--variant-default"
            disabled=""
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7c-.55 0-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3V8c0-.55-.45-1-1-1zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> WithBasicCaption story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        Fruits of the world
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> WithFullCaption story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        Fruits of the world
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Aren't they all so delicious?
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> WithLongCaption story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        This is a really long title that really should not be this long and it just keeps going and going and going
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Seriously, who let this happen?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":r8:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <span
          class="button__disabled"
        >
          <button
            aria-label="Add a row"
            class="button button--layout-icon-only button--disabled button--secondary button--lg button--variant-default"
            disabled=""
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7c-.55 0-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3V8c0-.55-.45-1-1-1zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> WithOnlyActions story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <span
          class="button__disabled"
        >
          <button
            aria-label="Add a row"
            class="button button--layout-icon-only button--disabled button--secondary button--lg button--variant-default"
            disabled=""
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7c-.55 0-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3V8c0-.55-.45-1-1-1zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> WithSearch story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        Fruits of the world
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Aren't they all so delicious?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":r0:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> WithSearchAndActions story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        Fruits of the world
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Aren't they all so delicious?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":r2:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <span
          class="button__disabled"
        >
          <button
            aria-label="Add a row"
            class="button button--layout-icon-only button--disabled button--secondary button--lg button--variant-default"
            disabled=""
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7c-.55 0-1 .45-1 1v3H8c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3V8c0-.55-.45-1-1-1zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<DataTable /> WithSearchAndCustomActions story renders snapshot 1`] = `
<div
  class="data-table"
>
  <div
    class="data-table__caption-container"
  >
    <div
      class="data-table__caption-text"
    >
      <div
        aria-hidden="true"
        class="data-table__caption"
      >
        Fruits of the world
      </div>
      <div
        aria-hidden="true"
        class="data-table__subcaption"
      >
        Aren't they all so delicious?
      </div>
    </div>
    <div
      class="data-table__search"
    >
      <div>
        <div
          class="input-field__body"
        >
          <input
            aria-invalid="false"
            aria-label="search"
            class="input input-field__input--leading-icon"
            disabled=""
            id=":r4:"
            placeholder="Search..."
            type="search"
          />
          <div
            class="input-field__leading-icon"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-table__actions"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          aria-label="add item"
          class="button button--layout-icon-only button--primary button--lg button--variant-default"
          type="button"
        >
          <span
            class="button__text"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
              />
            </svg>
          </span>
        </button>
        <button
          class="button button--layout-left button--secondary button--lg button--variant-default"
          type="button"
        >
          <span
            class="button__text"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.5rem"
              style="--icon-size: 1.5rem;"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.46 7.99953L20.25 6.24953L22 5.45953C22.39 5.27953 22.39 4.72953 22 4.54953L20.25 3.75953L19.46 1.99953C19.28 1.60953 18.73 1.60953 18.55 1.99953L17.76 3.74953L16 4.53953C15.61 4.71953 15.61 5.26953 16 5.44953L17.75 6.23953L18.54 7.99953C18.72 8.38953 19.28 8.38953 19.46 7.99953ZM11.5 9.49953L9.91 5.99953C9.56 5.21953 8.44 5.21953 8.09 5.99953L6.5 9.49953L3 11.0895C2.22 11.4495 2.22 12.5595 3 12.9095L6.5 14.4995L8.09 17.9995C8.45 18.7795 9.56 18.7795 9.91 17.9995L11.5 14.4995L15 12.9095C15.78 12.5495 15.78 11.4395 15 11.0895L11.5 9.49953ZM18.54 15.9995L17.75 17.7495L16 18.5395C15.61 18.7195 15.61 19.2695 16 19.4495L17.75 20.2395L18.54 21.9995C18.72 22.3895 19.27 22.3895 19.45 21.9995L20.24 20.2495L22 19.4595C22.39 19.2795 22.39 18.7295 22 18.5495L20.25 17.7595L19.46 15.9995C19.28 15.6095 18.72 15.6095 18.54 15.9995Z"
              />
            </svg>
            Tailor an Activity
          </span>
        </button>
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="show more actions"
            class="button button--layout-icon-only button--secondary button--lg button--variant-default"
            data-headlessui-state=""
            id="headlessui-menu-button-:r6:"
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 14C5.45 14 4.97933 13.804 4.588 13.412C4.196 13.0207 4 12.55 4 12C4 11.45 4.196 10.979 4.588 10.587C4.97933 10.1957 5.45 10 6 10C6.55 10 7.02067 10.1957 7.412 10.587C7.804 10.979 8 11.45 8 12C8 12.55 7.804 13.0207 7.412 13.412C7.02067 13.804 6.55 14 6 14ZM12 14C11.45 14 10.9793 13.804 10.588 13.412C10.196 13.0207 10 12.55 10 12C10 11.45 10.196 10.979 10.588 10.587C10.9793 10.1957 11.45 10 12 10C12.55 10 13.021 10.1957 13.413 10.587C13.8043 10.979 14 11.45 14 12C14 12.55 13.8043 13.0207 13.413 13.412C13.021 13.804 12.55 14 12 14ZM18 14C17.45 14 16.979 13.804 16.587 13.412C16.1957 13.0207 16 12.55 16 12C16 11.45 16.1957 10.979 16.587 10.587C16.979 10.1957 17.45 10 18 10C18.55 10 19.021 10.1957 19.413 10.587C19.8043 10.979 20 11.45 20 12C20 12.55 19.8043 13.0207 19.413 13.412C19.021 13.804 18.55 14 18 14Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <table>
    <tbody
      class="border-2 border-utility-default-lowEmphasis-hover"
    >
      <tr>
        <td>
          TODO: Table rows/cells Here
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
